--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_hooks: ^0.20.5
+  go_router: ^14.6.1
 
 dev_dependencies:
   flutter_test:
